--- a/packages/storybook-html/stories/components/accordion/accordion.mdx
+++ b/packages/storybook-html/stories/components/accordion/accordion.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as AccordionStories from './accordion.stories';
+import * as AccordionStories from "./accordion.stories";
 
 <Meta of={AccordionStories} />
 
@@ -10,7 +10,11 @@ import * as AccordionStories from './accordion.stories';
 
 <StatusBadge.StableDoc />
 
-<a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">
+<a
+  href="https://github.com/uq-its-ss/design-system/issues"
+  class="uq-button uq-button--text"
+  target="_blank"
+>
   Check for open issues
 </a>
 
@@ -244,9 +248,9 @@ Accordions are suitable when users only need to view a few key pieces of content
 
 ## Accessibility
 
-*   The title of each accordion item is contained in a button element.
-*   If the accordion content panel associated with an accordion title is visible, the button element has aria-expanded set to true. If the content panel is not visible, aria-expanded is set to false.
-*   The accordion button element has aria-controls set to the ID of the element containing the accordion content panel.
-*   Optionally, each element that serves as a container for panel content has `role="region"` and `aria-labelledby` with a value that refers to the button that controls display of the panel.
-    *   Avoid using role region in circumstances that create landmark region proliferation, e.g., in an accordion that contains more than approximately 6 panels that can be expanded at the same time.
-    *   Role region is especially helpful to the perception of structure by screen reader users when panels contain heading elements or a nested accordion.
+- The title of each accordion item is contained in a button element.
+- If the accordion content panel associated with an accordion title is visible, the button element has aria-expanded set to true. If the content panel is not visible, aria-expanded is set to false.
+- The accordion button element has aria-controls set to the ID of the element containing the accordion content panel.
+- Optionally, each element that serves as a container for panel content has `role="region"` and `aria-labelledby` with a value that refers to the button that controls display of the panel.
+  - Avoid using role region in circumstances that create landmark region proliferation, e.g., in an accordion that contains more than approximately 6 panels that can be expanded at the same time.
+  - Role region is especially helpful to the perception of structure by screen reader users when panels contain heading elements or a nested accordion.
