--- a/packages/storybook-html/stories/components/alert/alert.mdx
+++ b/packages/storybook-html/stories/components/alert/alert.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as AlertStories from './alert.stories';
+import * as AlertStories from "./alert.stories";
 
 <Meta of={AlertStories} />
 
@@ -10,7 +10,11 @@ import * as AlertStories from './alert.stories';
 
 <StatusBadge.ReviewDoc />
 
-<a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">
+<a
+  href="https://github.com/uq-its-ss/design-system/issues"
+  class="uq-button uq-button--text"
+  target="_blank"
+>
   Check for open issues
 </a>
 
@@ -390,6 +394,7 @@ new Alerts(document.getElementById("global-alerts-container"));
         • Error message <br />• Used on page or in page components
       </td>
     </tr>
+
   </tbody>
 </table>
 
@@ -485,6 +490,7 @@ new Alerts(document.getElementById("global-alerts-container"));
         dismissed
       </td>
     </tr>
+
   </tbody>
 </table>
 
