--- a/packages/storybook-html/stories/components/body/body-elements.mdx
+++ b/packages/storybook-html/stories/components/body/body-elements.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as BodyElementsStories from './body-elements.stories';
+import * as BodyElementsStories from "./body-elements.stories";
 
 <Meta of={BodyElementsStories} />
 
