--- a/packages/storybook-html/stories/components/body/body-utilities.mdx
+++ b/packages/storybook-html/stories/components/body/body-utilities.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas} from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as BodyUtilitiesStories from './body-utilities.stories';
+import * as BodyUtilitiesStories from "./body-utilities.stories";
 
 <Meta of={BodyUtilitiesStories} />
 
@@ -12,27 +12,39 @@ import * as BodyUtilitiesStories from './body-utilities.stories';
 
 ## Text colour
 
-  <Story of={BodyUtilitiesStories.textColorUtils} />
+{" "}
+
+<Story of={BodyUtilitiesStories.textColorUtils} />
 
 ## Text size
 
-  <Story of={BodyUtilitiesStories.textSizeUtils} />
+{" "}
+
+<Story of={BodyUtilitiesStories.textSizeUtils} />
 
 ## Text weight
 
-  <Story of={BodyUtilitiesStories.textWeightUtils} />
+{" "}
+
+<Story of={BodyUtilitiesStories.textWeightUtils} />
 
 ## Text alignment
 
-  <Story of={BodyUtilitiesStories.textAlignUtils} />
+{" "}
+
+<Story of={BodyUtilitiesStories.textAlignUtils} />
 
 ## Text prettiers
 
-  <Story of={BodyUtilitiesStories.textPrettyUtils} />
+{" "}
+
+<Story of={BodyUtilitiesStories.textPrettyUtils} />
 
 ## Background colour
 
-  <Story of={BodyUtilitiesStories.backgroundColourUtils} />
+{" "}
+
+<Story of={BodyUtilitiesStories.backgroundColourUtils} />
 
 ## Margin adjustment
 
@@ -52,14 +64,16 @@ Coming soon
 
 ## Visibility
 
-  <Story of={BodyUtilitiesStories.visibilityUtils} />
+{" "}
+
+<Story of={BodyUtilitiesStories.visibilityUtils} />
 
 <br />
 
 ### Print visibility
 
-*   `.show-for-print` - Add classname to element to show when printing
-*   `.hide-for-print` - Add classname to element to hide when printing
+- `.show-for-print` - Add classname to element to show when printing
+- `.hide-for-print` - Add classname to element to hide when printing
 
 ## Embedded media
 
