--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.mdx
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as BreadcrumbStories from './breadcrumb.stories';
+import * as BreadcrumbStories from "./breadcrumb.stories";
 
 <Meta of={BreadcrumbStories} />
 
@@ -10,7 +10,11 @@ import * as BreadcrumbStories from './breadcrumb.stories';
 
 <StatusBadge.StableDoc />
 
-<a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">
+<a
+  href="https://github.com/uq-its-ss/design-system/issues"
+  class="uq-button uq-button--text"
+  target="_blank"
+>
   Check for open issues
 </a>
 
@@ -67,7 +71,7 @@ Breadcrumbs are a horizontal list of links used to indicate the current page loc
 
 ### Truncation
 
-When exceeding 4 breadcrumbs - the current page, parent, parent's parent and home crumbs will be shown with the additional crumbs collapsed behind an expand link. The full breadcrumb trail can then be viewed by clicking the expand crumb. *Note: only expand functionality is included, and cannot be collapsed again without a page refresh.*
+When exceeding 4 breadcrumbs - the current page, parent, parent's parent and home crumbs will be shown with the additional crumbs collapsed behind an expand link. The full breadcrumb trail can then be viewed by clicking the expand crumb. _Note: only expand functionality is included, and cannot be collapsed again without a page refresh._
 
 ### Wrapper
 
@@ -85,9 +89,9 @@ Wrap the `nav.uq-breadcrumb` element in a `div.uq-breadcrumb__container` element
 
 ## How and when to use
 
-*   The breadcrumb reflects the information architecture of a page, not a historical navigation trail.
-*   The component displays on a page once a user has navigated away from the home page to provide a navigation path back to the home and parent level pages.
-*   The breadcrumb lists the current page however this should not be linked.
+- The breadcrumb reflects the information architecture of a page, not a historical navigation trail.
+- The component displays on a page once a user has navigated away from the home page to provide a navigation path back to the home and parent level pages.
+- The breadcrumb lists the current page however this should not be linked.
 
 ## Accessibility
 
