--- a/packages/storybook-html/stories/components/card/card.mdx
+++ b/packages/storybook-html/stories/components/card/card.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as CardStories from './card.stories';
+import * as CardStories from "./card.stories";
 
 <Meta of={CardStories} />
 
@@ -10,7 +10,11 @@ import * as CardStories from './card.stories';
 
 <StatusBadge.ReviewDoc />
 
-<a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">
+<a
+  href="https://github.com/uq-its-ss/design-system/issues"
+  class="uq-button uq-button--text"
+  target="_blank"
+>
   Check for open issues
 </a>
 
@@ -94,6 +98,7 @@ The height of the cards in a group all equalises by default.
 </Canvas>
 
 ```html
+
 ```
 
 #### - Without image, shaded
@@ -133,6 +138,7 @@ Button variants are restricted to purple and it's outline version.
 </Canvas>
 
 ```html
+
 ```
 
 #### - With image
@@ -142,6 +148,7 @@ Button variants are restricted to purple and it's outline version.
 </Canvas>
 
 ```html
+
 ```
 
 #### - With image, button
@@ -151,6 +158,7 @@ Button variants are restricted to purple and it's outline version.
 </Canvas>
 
 ```html
+
 ```
 
 ## Variant examples
@@ -414,6 +422,7 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
         Align image & content: <br /> list \*\*
       </td>
     </tr>
+
   </tbody>
 </table>
 
@@ -424,5 +433,5 @@ For event card, the sub-title is purple-light in colour, 16px, medium weight 500
 
 ## Accessibility
 
-*   With keyboard accessibility, tabbing takes the user through the links in the card.
-*   With assistive technologies like screen readers, it reads out the heading level, title, text and links in the card.
+- With keyboard accessibility, tabbing takes the user through the links in the card.
+- With assistive technologies like screen readers, it reads out the heading level, title, text and links in the card.
