--- a/packages/storybook-html/stories/components/core/date.mdx
+++ b/packages/storybook-html/stories/components/core/date.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Preview } from '@storybook/blocks';
+import { Meta, Story, Preview } from "@storybook/blocks";
 
 <Meta title="Core/Standards/Date formats" />
 
@@ -10,22 +10,24 @@ Display data such as date & time in a consistent and user-friendly way. Present 
 
 These date formats are designed for
 
-*   The current date and time
-*   A date and time setting, such as an alarm or event reminder
-*   A date and time when an object was created, sent, edited, or otherwise acted upon
+- The current date and time
+- A date and time setting, such as an alarm or event reminder
+- A date and time when an object was created, sent, edited, or otherwise acted upon
 
 ## Basic displays
 
 <table>
   <caption>Basic date displays</caption>
 
-  <thead>
-    <tr>
-      <th>Example</th>
-      <th>Format</th>
-      <th>Usage</th>
-    </tr>
-  </thead>
+{" "}
+
+<thead>
+  <tr>
+    <th>Example</th>
+    <th>Format</th>
+    <th>Usage</th>
+  </tr>
+</thead>
 
   <tbody>
     <tr>
@@ -179,6 +181,7 @@ These date formats are designed for
 
       <td>When listing the time zone, drop the leading 0 for single digits.</td>
     </tr>
+
   </tbody>
 </table>
 
@@ -191,12 +194,14 @@ Relative language may not always be appropriate, e.g. current date in a clock ap
 <table>
   <caption>Relative language and approximate time</caption>
 
-  <thead>
-    <tr>
-      <th>Example</th>
-      <th>Usage</th>
-    </tr>
-  </thead>
+{" "}
+
+<thead>
+  <tr>
+    <th>Example</th>
+    <th>Usage</th>
+  </tr>
+</thead>
 
   <tbody>
     <tr>
@@ -240,6 +245,7 @@ Relative language may not always be appropriate, e.g. current date in a clock ap
         <strong>Don’t display relative time which exceeds more than 1 week</strong>.
       </td>
     </tr>
+
   </tbody>
 </table>
 
@@ -250,13 +256,15 @@ Depending on the context, show either date or time, or both date and time.
 <table>
   <caption>Date and time</caption>
 
-  <thead>
-    <tr>
-      <th>Example</th>
-      <th>Format</th>
-      <th>Usage</th>
-    </tr>
-  </thead>
+{" "}
+
+<thead>
+  <tr>
+    <th>Example</th>
+    <th>Format</th>
+    <th>Usage</th>
+  </tr>
+</thead>
 
   <tbody>
     <tr>
@@ -322,6 +330,7 @@ Depending on the context, show either date or time, or both date and time.
         specify hour, minute, second units (ie. 1hr 1min 5sec)
       </td>
     </tr>
+
   </tbody>
 </table>
 
@@ -332,13 +341,15 @@ Depending on the context, show either date or time, or both date and time.
 <table>
   <caption>Date and time</caption>
 
-  <thead>
-    <tr>
-      <th>Example</th>
-      <th>Format</th>
-      <th>Usage</th>
-    </tr>
-  </thead>
+{" "}
+
+<thead>
+  <tr>
+    <th>Example</th>
+    <th>Format</th>
+    <th>Usage</th>
+  </tr>
+</thead>
 
   <tbody>
     <tr>
@@ -390,6 +401,7 @@ Depending on the context, show either date or time, or both date and time.
         removing the “:00”:
       </td>
     </tr>
+
   </tbody>
 </table>
 
