--- a/packages/storybook-html/stories/components/core/space.mdx
+++ b/packages/storybook-html/stories/components/core/space.mdx
@@ -1,4 +1,4 @@
-import { Meta } from '@storybook/blocks';
+import { Meta } from "@storybook/blocks";
 import "./_space.scss";
 
 <Meta title="Core/Space" />
@@ -29,6 +29,7 @@ Use this basic spacing scale when building individual components. It includes sm
     <td>No space</td>
 
     <td />
+
   </tr>
 
   <tr>
@@ -44,6 +45,7 @@ Use this basic spacing scale when building individual components. It includes sm
     <td>
       <div className="uqds-space uqds-space-xs" />
     </td>
+
   </tr>
 
   <tr>
@@ -59,6 +61,7 @@ Use this basic spacing scale when building individual components. It includes sm
     <td>
       <div className="uqds-space uqds-space-sm" />
     </td>
+
   </tr>
 
   <tr>
@@ -74,6 +77,7 @@ Use this basic spacing scale when building individual components. It includes sm
     <td>
       <div className="uqds-space" />
     </td>
+
   </tr>
 
   <tr>
@@ -89,6 +93,7 @@ Use this basic spacing scale when building individual components. It includes sm
     <td>
       <div className="uqds-space uqds-space-lg" />
     </td>
+
   </tr>
 
   <tr>
@@ -104,6 +109,7 @@ Use this basic spacing scale when building individual components. It includes sm
     <td>
       <div className="uqds-space uqds-space-xl" />
     </td>
+
   </tr>
 
   <tr>
@@ -119,6 +125,7 @@ Use this basic spacing scale when building individual components. It includes sm
     <td>
       <div className="uqds-space uqds-space-xxl" />
     </td>
+
   </tr>
 
   <tr>
@@ -134,6 +141,7 @@ Use this basic spacing scale when building individual components. It includes sm
     <td>
       <div className="uqds-space uqds-space-xxxl" />
     </td>
+
   </tr>
 
   <tr>
@@ -149,6 +157,7 @@ Use this basic spacing scale when building individual components. It includes sm
     <td>
       <div className="uqds-space uqds-space-xxxxl" />
     </td>
+
   </tr>
 
   <tr>
@@ -164,6 +173,7 @@ Use this basic spacing scale when building individual components. It includes sm
     <td>
       <div className="uqds-space uqds-space-ul" />
     </td>
+
   </tr>
 
   <tr>
@@ -179,6 +189,7 @@ Use this basic spacing scale when building individual components. It includes sm
     <td>
       <div className="uqds-space uqds-space-uul" />
     </td>
+
   </tr>
 
   <tr>
@@ -194,6 +205,7 @@ Use this basic spacing scale when building individual components. It includes sm
     <td>
       <div className="uqds-space uqds-space-uuul" />
     </td>
+
   </tr>
 
   <tr>
@@ -209,6 +221,7 @@ Use this basic spacing scale when building individual components. It includes sm
     <td>
       <div className="uqds-space uqds-space-uuuul" />
     </td>
+
   </tr>
 
   <tr>
@@ -224,6 +237,7 @@ Use this basic spacing scale when building individual components. It includes sm
     <td>
       <div className="uqds-space uqds-space-uuuuul" />
     </td>
+
   </tr>
 </table>
 
@@ -251,6 +265,7 @@ Use this layout scale for arranging components and other UI parts into a full pa
     <td>auto</td>
 
     <td />
+
   </tr>
 
   <tr>
@@ -266,6 +281,7 @@ Use this layout scale for arranging components and other UI parts into a full pa
     <td>
       <div className="uqds-space" />
     </td>
+
   </tr>
 
   <tr>
@@ -281,6 +297,7 @@ Use this layout scale for arranging components and other UI parts into a full pa
     <td>
       <div className="uqds-space uqds-space-lg" />
     </td>
+
   </tr>
 
   <tr>
@@ -296,6 +313,7 @@ Use this layout scale for arranging components and other UI parts into a full pa
     <td>
       <div className="uqds-space uqds-space-xxl" />
     </td>
+
   </tr>
 
   <tr>
@@ -311,6 +329,7 @@ Use this layout scale for arranging components and other UI parts into a full pa
     <td>
       <div className="uqds-space uqds-space-ul" />
     </td>
+
   </tr>
 
   <tr>
@@ -326,6 +345,7 @@ Use this layout scale for arranging components and other UI parts into a full pa
     <td>
       <div className="uqds-space uqds-space-uuul" />
     </td>
+
   </tr>
 
   <tr>
@@ -341,6 +361,7 @@ Use this layout scale for arranging components and other UI parts into a full pa
     <td>
       <div className="uqds-space uqds-space-uuuuul" />
     </td>
+
   </tr>
 </table>
 
@@ -352,8 +373,8 @@ Consideration should be given to how spacing is applied within components and th
 
 Applies padding to containers
 
-*   For all user interface containers.
-*   Apply padding on all sides.
+- For all user interface containers.
+- Apply padding on all sides.
 
 <table>
   <tr>
@@ -379,6 +400,7 @@ Applies padding to containers
         <li>Apply padding equally on all sides.</li>
       </ul>
     </td>
+
   </tr>
 
   <tr>
@@ -398,6 +420,7 @@ Applies padding to containers
         <li>Space increments are used to control the density</li>
       </ul>
     </td>
+
   </tr>
 
   <tr>
@@ -422,6 +445,7 @@ Applies padding to containers
         </li>
       </ul>
     </td>
+
   </tr>
 
   <tr>
@@ -442,6 +466,7 @@ Applies padding to containers
         <li>Examples include, textboxes, textareas, and other form elements</li>
       </ul>
     </td>
+
   </tr>
 </table>
 
@@ -449,8 +474,8 @@ Applies padding to containers
 
 Stacks content vertically, applying top margin.
 
-*   allows us to target the objects space through the css cascade, and the space to the next object.
-*   use for all stacked content. So for example panels, form fields and anything else that is stacked vertically.
+- allows us to target the objects space through the css cascade, and the space to the next object.
+- use for all stacked content. So for example panels, form fields and anything else that is stacked vertically.
 
 <table>
   <tr>
@@ -490,6 +515,7 @@ Stacks content vertically, applying top margin.
         <li>Apply top margin to content</li>
       </ul>
     </td>
+
   </tr>
 
   <tr>
@@ -522,6 +548,7 @@ Stacks content vertically, applying top margin.
         <li>Increases the density of stacked content</li>
       </ul>
     </td>
+
   </tr>
 
   <tr>
@@ -554,6 +581,7 @@ Stacks content vertically, applying top margin.
         <li>decreases the density of stacked content</li>
       </ul>
     </td>
+
   </tr>
 </table>
 
@@ -561,7 +589,7 @@ Stacks content vertically, applying top margin.
 
 Arrange objects inline horizontally, applying right margin.
 
-*   wrapping as they flow like text from the left or right.
+- wrapping as they flow like text from the left or right.
 
 <table>
   <tr>
@@ -601,6 +629,7 @@ Arrange objects inline horizontally, applying right margin.
         <li>Apply right margin to content</li>
       </ul>
     </td>
+
   </tr>
 
   <tr>
@@ -633,6 +662,7 @@ Arrange objects inline horizontally, applying right margin.
         <li>Increases the density of inline content</li>
       </ul>
     </td>
+
   </tr>
 
   <tr>
@@ -665,5 +695,6 @@ Arrange objects inline horizontally, applying right margin.
         <li>decreases the density of inline content</li>
       </ul>
     </td>
+
   </tr>
 </table>
