--- a/packages/storybook-html/stories/components/core/typography.mdx
+++ b/packages/storybook-html/stories/components/core/typography.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas, Preview } from '@storybook/blocks';
+import { Meta, Story, Canvas, Preview } from "@storybook/blocks";
 import "./_typography.scss";
 
 <Meta title="Core/Typography" />
@@ -37,6 +37,7 @@ The following fonts are used for UQ online applications:
       <td><div class="uqds-font uqds-font--montserrat uqds-font--500">Medium (500)</div></td>
       <td>For the main page heading</td>
     </tr>
+
   </tbody>
 </table>
 
@@ -159,6 +160,7 @@ We use 16px as the base font size and use it to calculate the other font sizes.
       <td>3</td>
       <td><code>$font-size-ul</code></td>
     </tr>
+
   </tbody>
 </table>
 
@@ -197,7 +199,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Size:">$font-size-xxxl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td>
       <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
-      <td className="uqds-table__item" data-title="Example"><h2>This is a H2 heading</h2></td> 
+      <td className="uqds-table__item" data-title="Example"><h2>This is a H2 heading</h2></td>
     </tr>
 
     <tr className="uqds-table__row">
@@ -207,7 +209,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Size:">$font-size-xxl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td>
       <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
-      <td className="uqds-table__item" data-title="Example"><h3>This is a H3 heading</h3></td> 
+      <td className="uqds-table__item" data-title="Example"><h3>This is a H3 heading</h3></td>
     </tr>
 
     <tr className="uqds-table__row">
@@ -217,7 +219,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Size:">$font-size-xl</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td>
       <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
-      <td className="uqds-table__item" data-title="Example"><h4>This is a H4 heading</h4></td> 
+      <td className="uqds-table__item" data-title="Example"><h4>This is a H4 heading</h4></td>
     </tr>
 
     <tr className="uqds-table__row">
@@ -227,7 +229,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Size:">$font-size-l</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td>
       <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
-      <td className="uqds-table__item" data-title="Example"><h5>This is a H5 heading</h5></td> 
+      <td className="uqds-table__item" data-title="Example"><h5>This is a H5 heading</h5></td>
     </tr>
 
     <tr className="uqds-table__row">
@@ -237,7 +239,7 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Size:">$font-size-m</td>
       <td className="uqds-table__item" data-title="Line-height:">1.2</td>
       <td className="uqds-table__item" data-title="Colour:">$purple-500</td>
-      <td className="uqds-table__item" data-title="Example"><h6>This is a H6 heading</h6></td> 
+      <td className="uqds-table__item" data-title="Example"><h6>This is a H6 heading</h6></td>
     </tr>
 
     <tr className="uqds-table__row">
@@ -329,5 +331,6 @@ The following typography styles are setup in HTML elements and components. Pleas
       <td className="uqds-table__item" data-title="Colour:">$text</td>
       <td className="uqds-table__item" data-title="Example"><blockquote>This is a blockquote</blockquote></td>
     </tr>
+
   </tbody>
 </table>
