--- a/packages/storybook-html/stories/components/footer-legacy/footer.mdx
+++ b/packages/storybook-html/stories/components/footer-legacy/footer.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as FooterStories from './footer.stories';
+import * as FooterStories from "./footer.stories";
 
 <Meta of={FooterStories} />
 
