--- a/packages/storybook-html/stories/components/footer/footer.mdx
+++ b/packages/storybook-html/stories/components/footer/footer.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as FooterStories from './footer.stories';
+import * as FooterStories from "./footer.stories";
 
 <Meta of={FooterStories} />
 
@@ -16,11 +16,11 @@ The footer purpose is to provide a consistent brand, user experience and satisfy
 
 The footer consists of five main sections.
 
-*   Reconciliation statement
-*   Additional support and contact navigation
-*   Social media links
-*   Organisational details
-*   Terms and conditions
+- Reconciliation statement
+- Additional support and contact navigation
+- Social media links
+- Organisational details
+- Terms and conditions
 
 ## Default example
 
@@ -36,6 +36,6 @@ Software as a service (SaaS) applications and templates supplied by third party 
 
 When implementation of the full footer is not possible, a simplified approach using basic elements may be appropriate. UQ purple background combined with elements of the footer.
 
-*   © copyright
-*   ABN
-*   CRICOS code
+- © copyright
+- ABN
+- CRICOS code
