--- a/packages/storybook-html/stories/components/form/form-controls.mdx
+++ b/packages/storybook-html/stories/components/form/form-controls.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as FormControlsStories from './form-controls.stories';
+import * as FormControlsStories from "./form-controls.stories";
 
 <Meta of={FormControlsStories} />
 
@@ -15,11 +15,11 @@ import * as FormControlsStories from './form-controls.stories';
 Forms allow users to interact with your website or web
 application by providing some information. For example,
 
-*   entering login details
-*   setting a new password
-*   selecting search filters
-*   customising site preferences
-*   and more.
+- entering login details
+- setting a new password
+- selecting search filters
+- customising site preferences
+- and more.
 
 ## Accessibility requirements
 
@@ -32,7 +32,7 @@ of both in the basic setup per control.
 ### Inline validation feedback is announced and associated with a control
 
 Creating an excellent form-filling experience, for the most part, involves using
-effective [*form validation*][2] practices where it is helpful. And, as part of
+effective [_form validation_][2] practices where it is helpful. And, as part of
 good client-side form validation, we should display useful inline feedback to guide users when
 the need arises. So then, **how do we ensure that this feedback is also
 accessible?** On the client-side, we can implement form validation in two ways:
@@ -47,7 +47,7 @@ associate the feedback with the affected control using the `aria-describedby`
 attribute. In our code examples, we'll be demonstrating the usage of
 `aria-live="polite"`, `aria-invalid`, and `aria-describedby` attributes.
 
-***
+---
 
 You can also review your form with [this checklist by the A11Y project][6] if
 you are unsure that you comply with Web Content Accessibility Guidelines (WCAG)
@@ -60,9 +60,11 @@ recommendations and examples.
 
 Input for freestyle text entry. Use when asking for open-ended, single-line
 answers from your users. E.g. "first name", "street address". For multi-line
-answers, consider using a *text area*.
+answers, consider using a _text area_.
 
-  <Story of={FormControlsStories.inputText} />
+{" "}
+
+<Story of={FormControlsStories.inputText} />
 
 #### Basic setup
 
@@ -93,7 +95,9 @@ answers, consider using a *text area*.
 
 #### Error feedback
 
-  <Story of={FormControlsStories.inputTextError} />
+{" "}
+
+<Story of={FormControlsStories.inputTextError} />
 
 ```html
 <form>
@@ -118,7 +122,9 @@ Success feedback on an individual form field should be used selectively and only
 when a user truly requires extra guidance. E.g. where there are strict
 formatting or unique value requirements.
 
-  <Story of={FormControlsStories.inputTextSuccess} />
+{" "}
+
+<Story of={FormControlsStories.inputTextSuccess} />
 
 ```html
 <form>
@@ -140,7 +146,9 @@ formatting or unique value requirements.
 
 Useful for contextual menus e.g. filter search results based on keywords.
 
-  <Story of={FormControlsStories.inputTextInline} />
+{" "}
+
+<Story of={FormControlsStories.inputTextInline} />
 
 Apply the `label--inline` class name to the `label` element like so:
 
@@ -168,7 +176,9 @@ panels. For search fields, consider setting `type="search"`.
 > Note: there's still an expectation that there's an associated label whether
 > visually hidden or not.
 
-  <Story of={FormControlsStories.inputTextLarge} />
+{" "}
+
+<Story of={FormControlsStories.inputTextLarge} />
 
 Apply the `input--large` class name to the `input` element like so:
 
@@ -188,7 +198,9 @@ The select field, used to choose a single option from a list. If multiple
 options can be selected at the same time, consider using multiple checkboxes
 instead.
 
-  <Story of={FormControlsStories.select} />
+{" "}
+
+<Story of={FormControlsStories.select} />
 
 #### Basic setup
 
@@ -222,7 +234,9 @@ instead.
 
 #### Error feedback
 
-  <Story of={FormControlsStories.selectError} />
+{" "}
+
+<Story of={FormControlsStories.selectError} />
 
 ```html
 <form>
@@ -247,7 +261,9 @@ instead.
 
 #### Inline label and select
 
-  <Story of={FormControlsStories.selectInline} />
+{" "}
+
+<Story of={FormControlsStories.selectInline} />
 
 Apply the `label--inline` class name to the `label` element like so:
 
@@ -283,7 +299,9 @@ Apply the `label--inline` class name to the `label` element like so:
 Use to provided users with multiple yes or no options. For example, accepting
 terms and conditions and opting into communications.
 
-  <Story of={FormControlsStories.checkbox} />
+{" "}
+
+<Story of={FormControlsStories.checkbox} />
 
 #### Basic setup
 
@@ -314,7 +332,9 @@ terms and conditions and opting into communications.
 
 #### Error feedback
 
-  <Story of={FormControlsStories.checkboxError} />
+{" "}
+
+<Story of={FormControlsStories.checkboxError} />
 
 ```html
 <form>
@@ -339,9 +359,11 @@ terms and conditions and opting into communications.
 ### Radio buttons
 
 Use to provide users with up to three, mutually exclusive options. If you have
-more than three options, please consider a *select* control instead.
+more than three options, please consider a _select_ control instead.
 
-  <Story of={FormControlsStories.radio} />
+{" "}
+
+<Story of={FormControlsStories.radio} />
 
 #### Basic setup
 
@@ -393,7 +415,9 @@ Use a `fieldset` and `legend` to group and label your radio options.
 
 #### Error feedback
 
-  <Story of={FormControlsStories.radioError} />
+{" "}
+
+<Story of={FormControlsStories.radioError} />
 
 ```html
 <form>
@@ -426,15 +450,21 @@ Use a `fieldset` and `legend` to group and label your radio options.
 
 ### Text area
 
-  <Story of={FormControlsStories.textArea} />
+{" "}
+
+<Story of={FormControlsStories.textArea} />
 
 ### Number input
 
-  <Story of={FormControlsStories.inputNumber} />
+{" "}
+
+<Story of={FormControlsStories.inputNumber} />
 
 ### Password input
 
-  <Story of={FormControlsStories.inputPassword} />
+{" "}
+
+<Story of={FormControlsStories.inputPassword} />
 
 ### File input
 
@@ -488,19 +518,13 @@ better when used within search filters and other discrete content controls.
 
 ## Related
 
-*   [Error summary][7]
-*   [Form validation][1]
+- [Error summary][7]
+- [Form validation][1]
 
 [1]: /?path=/docs/patterns-form-validation--primary
-
 [2]: https://developer.mozilla.org/en-US/docs/Learn/Forms/Form_validation
-
 [3]: https://developer.mozilla.org/en-US/docs/Learn/Forms/HTML5_input_types
-
 [4]: https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/ARIA_Live_Regions
-
 [5]: https://www.w3.org/WAI/tutorials/forms/labels/
-
 [6]: https://www.a11yproject.com/checklist/#forms
-
 [7]: /?path=/docs/components-form-error-summary--error-summary
