--- a/packages/storybook-html/stories/components/form/form-error-summary.mdx
+++ b/packages/storybook-html/stories/components/form/form-error-summary.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as FormErrorSummaryStories from './form-error-summary.stories';
+import * as FormErrorSummaryStories from "./form-error-summary.stories";
 
 <Meta of={FormErrorSummaryStories} />
 
@@ -71,5 +71,5 @@ should be injected into an element with this specialised role active.
 
 ## Related
 
-*   [Form controls](/?path=/docs/components-form-controls--input-text)
-*   [Form validation](/?path=/docs/patterns-form-validation--primary)
+- [Form controls](/?path=/docs/components-form-controls--input-text)
+- [Form validation](/?path=/docs/patterns-form-validation--primary)
