--- a/packages/storybook-html/stories/components/hero-basic/hero-basic.docs.mdx
+++ b/packages/storybook-html/stories/components/hero-basic/hero-basic.docs.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as HeroBasicStories from './hero-basic.stories';
+import * as HeroBasicStories from "./hero-basic.stories";
 
 <Meta of={HeroBasicStories} />
 
@@ -24,8 +24,8 @@ There are 4 elements within the basic hero.
 
 There are no size or colour variations for the basic hero component.
 
-<Canvas sourceState='hidden'>
-  <Story of={HeroBasicStories.HeroBasic} /> 
+<Canvas sourceState="hidden">
+  <Story of={HeroBasicStories.HeroBasic} />
 </Canvas>
 
 ```html
@@ -72,17 +72,17 @@ There are no size or colour variations for the basic hero component.
 #### Basic
 
 <Canvas>
-  <Story of={HeroBasicStories.HeroBasic} /> 
+  <Story of={HeroBasicStories.HeroBasic} />
 </Canvas>
 
 #### Program
 
 <Canvas>
-  <Story of={HeroBasicStories.Program} /> 
+  <Story of={HeroBasicStories.Program} />
 </Canvas>
 
 #### Plan
 
 <Canvas>
-  <Story of={HeroBasicStories.Plan} /> 
+  <Story of={HeroBasicStories.Plan} />
 </Canvas>
