--- a/packages/storybook-html/stories/components/page-header/page-header.mdx
+++ b/packages/storybook-html/stories/components/page-header/page-header.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as PageHeaderStories from './page-header.stories';
+import * as PageHeaderStories from "./page-header.stories";
 
 <Meta of={PageHeaderStories} />
 
@@ -12,7 +12,7 @@ The Page header component is used to display the page title or the breadcrumbs o
 The default background color is set to light grey to distinguish it from the page contents.
 
 <Canvas sourceState="hidden">
-  <Story of={PageHeaderStories.pageHeader} /> 
+  <Story of={PageHeaderStories.pageHeader} />
 </Canvas>
 
 ### Page header default
