--- a/packages/storybook-html/stories/components/previous-next/previous-next.mdx
+++ b/packages/storybook-html/stories/components/previous-next/previous-next.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as PreviousNextStories from './previous-next.stories';
+import * as PreviousNextStories from "./previous-next.stories";
 
 <Meta of={PreviousNextStories} />
 
@@ -10,15 +10,19 @@ import * as PreviousNextStories from './previous-next.stories';
 
 <StatusBadge.ReviewDoc />
 
-<a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">
+<a
+  href="https://github.com/uq-its-ss/design-system/issues"
+  class="uq-button uq-button--text"
+  target="_blank"
+>
   Check for open issues
 </a>
 
 ## Overview
 
-*   The Previous-next component is also a form of pagination.
-*   It provides previous and next buttons (links) to navigate between pages or between tab contents on the same page.
-*   They are aligned to the sides of the page or in some instances to the sides of the tab contents.
+- The Previous-next component is also a form of pagination.
+- It provides previous and next buttons (links) to navigate between pages or between tab contents on the same page.
+- They are aligned to the sides of the page or in some instances to the sides of the tab contents.
 
 ## Default example
 
@@ -27,7 +31,7 @@ import * as PreviousNextStories from './previous-next.stories';
 An instance when only the next button is visible
 
 <Canvas sourceState="hidden">
-  <Story of={PreviousNextStories.previousNextInitial} /> 
+  <Story of={PreviousNextStories.previousNextInitial} />
 </Canvas>
 
 ```html
@@ -52,7 +56,7 @@ An instance when only the next button is visible
 An instance when both the previous and next buttons are visible
 
 <Canvas sourceState="hidden">
-  <Story of={PreviousNextStories.previousNextMiddle} /> 
+  <Story of={PreviousNextStories.previousNextMiddle} />
 </Canvas>
 
 ```html
@@ -78,7 +82,7 @@ An instance when both the previous and next buttons are visible
 An instance when only the previous button is visible
 
 <Canvas sourceState="hidden">
-  <Story of={PreviousNextStories.previousNextFinal} /> 
+  <Story of={PreviousNextStories.previousNextFinal} />
 </Canvas>
 
 ```html
@@ -100,12 +104,12 @@ An instance when only the previous button is visible
 
 ## How and when to use
 
-*   The Previous-next component can be used with or without the progression component.
+- The Previous-next component can be used with or without the progression component.
 
 ### Breakpoints
 
-*   The previous and next buttons collapses at viewport widths less than 640px.
+- The previous and next buttons collapses at viewport widths less than 640px.
 
 ## Related
 
-*   Progression component could be used in conjunction with the Previous-next component.
+- Progression component could be used in conjunction with the Previous-next component.
