--- a/packages/storybook-html/stories/deliverables/uq-maps/UX/uq-maps-ux-list-map-toggle.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/UX/uq-maps-ux-list-map-toggle.mdx
@@ -1,4 +1,4 @@
-import { Meta } from '@storybook/blocks';
+import { Meta } from "@storybook/blocks";
 import MermaidDisplay from "../../../../.storybook/custom/components/MermaidDisplay";
 import { mobileA, desktopA } from "./uq-maps-ux-list-map-toggle.mermaid";
 
@@ -6,7 +6,7 @@ import { mobileA, desktopA } from "./uq-maps-ux-list-map-toggle.mermaid";
 
 # Browsing POI's using list & map views
 
-## Goal: browsing POIs *within a category* using list & map views
+## Goal: browsing POIs _within a category_ using list & map views
 
 E.g. as a student, I want to decide what to purchase for lunch on the St. Lucia
 campus
@@ -77,6 +77,7 @@ component examples are indicated using the 🧩 icon.
         </tbody>
       </tbody>
     </table>
+
   </div>
 </div>
 
@@ -131,5 +132,6 @@ Emboldened paths represent the proposed flow to achieve the above goal.
         </tbody>
       </tbody>
     </table>
+
   </div>
 </div>
