--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-1-live-data-indicator.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-1-live-data-indicator.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as UqMaps1LiveDataIndicatorStories from './uq-maps-1-live-data-indicator.stories';
+import * as UqMaps1LiveDataIndicatorStories from "./uq-maps-1-live-data-indicator.stories";
 
 <Meta of={UqMaps1LiveDataIndicatorStories} />
 
@@ -10,12 +10,12 @@ import * as UqMaps1LiveDataIndicatorStories from './uq-maps-1-live-data-indicato
 
 ## Default
 
-<Canvas sourceState='hidden'>
-  <Story of={UqMaps1LiveDataIndicatorStories.liveDataIndicator} /> 
+<Canvas sourceState="hidden">
+  <Story of={UqMaps1LiveDataIndicatorStories.liveDataIndicator} />
 </Canvas>
 
 ## Preset color variants
 
-<Canvas sourceState='hidden'>
-  <Story of={UqMaps1LiveDataIndicatorStories.liveDataIndicatorVariants} /> 
+<Canvas sourceState="hidden">
+  <Story of={UqMaps1LiveDataIndicatorStories.liveDataIndicatorVariants} />
 </Canvas>
