--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-5-slide-drawer.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-5-slide-drawer.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as UqMaps5SlideDrawerStories from './uq-maps-5-slide-drawer.stories';
+import * as UqMaps5SlideDrawerStories from "./uq-maps-5-slide-drawer.stories";
 
 <Meta of={UqMaps5SlideDrawerStories} />
 
@@ -15,6 +15,6 @@ this should be the entire screen.
 
 ### Basic usage
 
-<Canvas sourceState='hidden' withToolbar>
-  <Story of={UqMaps5SlideDrawerStories.expanded} /> 
+<Canvas sourceState="hidden" withToolbar>
+  <Story of={UqMaps5SlideDrawerStories.expanded} />
 </Canvas>
