--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-6-app-info.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-6-app-info.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as UqMaps6AppInfoStories from './uq-maps-6-app-info.stories';
+import * as UqMaps6AppInfoStories from "./uq-maps-6-app-info.stories";
 
 <Meta of={UqMaps6AppInfoStories} />
 
@@ -8,7 +8,7 @@ import * as UqMaps6AppInfoStories from './uq-maps-6-app-info.stories';
 
 <StatusBadge.Development />
 
-Implements the *slide drawer* and *badge* to display app info.
+Implements the _slide drawer_ and _badge_ to display app info.
 
 ## Mobile
 
@@ -16,14 +16,14 @@ Implements the *slide drawer* and *badge* to display app info.
 
 #### Basic usage
 
-<Canvas sourceState='hidden' withToolbar>
-  <Story of={UqMaps6AppInfoStories.closed} /> 
+<Canvas sourceState="hidden" withToolbar>
+  <Story of={UqMaps6AppInfoStories.closed} />
 </Canvas>
 
 ### 6B. Open
 
 #### Basic usage
 
-<Canvas sourceState='hidden' withToolbar>
+<Canvas sourceState="hidden" withToolbar>
   <Story of={UqMaps6AppInfoStories.open} />
 </Canvas>
