--- a/packages/storybook-html/stories/docs/introduction/get-started.mdx
+++ b/packages/storybook-html/stories/docs/introduction/get-started.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 
 <Meta title="Introduction/Get started" />
 
@@ -26,6 +26,7 @@ import { Meta, Story, Canvas } from '@storybook/blocks';
       contact us
       </a> and we can package up styles and components for you to use in your project.
     </p>
+
   </div>
 </div>
 
@@ -35,19 +36,19 @@ There are a few ways to get started with the UQ Design System. Which method you 
 
 Here are the ways you can start using the UQ Design System right now;
 
-*   If you have prior experience with npm and Sass, [use the npm CLI to install components](#using-npm-to-install-components-into-your-project).
-*   If you don't have previous experience with npm or Sass, please [contact us at ADS-UI][2] for further options.
-*   Designers can go straight to the docs to view working examples. Also, check out the [Future Students Design System][3] (Figma project).
-*   If you would like a walkthrough of the docs for your analysis needs, please [contact us][2] for a tour.
+- If you have prior experience with npm and Sass, [use the npm CLI to install components](#using-npm-to-install-components-into-your-project).
+- If you don't have previous experience with npm or Sass, please [contact us at ADS-UI][2] for further options.
+- Designers can go straight to the docs to view working examples. Also, check out the [Future Students Design System][3] (Figma project).
+- If you would like a walkthrough of the docs for your analysis needs, please [contact us][2] for a tour.
 
 ## Reading the docs
 
 Reading the documentation is an integral part of implementing the Design System.
 It's where we provide:
 
-*   HTML snippets,
-*   JavaScript & Sass library docs,
-*   and guidance via standards, patterns, and systems.
+- HTML snippets,
+- JavaScript & Sass library docs,
+- and guidance via standards, patterns, and systems.
 
 ## Using npm to install components into your project
 
@@ -154,15 +155,9 @@ Instructions coming soon after we get our house in order.
 \* '--JS--' denotes that a package contains a JavaScript library.
 
 [1]: https://confluence.its.uq.edu.au/confluence/x/0DwDCw
-
 [2]: /?path=/docs/introduction-overview--page#contacts-and-community
-
 [3]: https://www.figma.com/file/Li7SZkmaLgw8ZdiHje2q7x/Future-Students-Design-System?node-id=1691%3A0
-
 [4]: https://registry.npmjs.org
-
 [5]: https://sass-lang.com/documentation/at-rules/use
-
 [6]: https://sass-lang.com/dart-sass
-
 [7]: https://webpack.js.org/loaders/sass-loader/#implementation
