--- a/packages/storybook-html/stories/layout/sections/sections.docs.mdx
+++ b/packages/storybook-html/stories/layout/sections/sections.docs.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as SectionsStories from './sections.stories';
+import * as SectionsStories from "./sections.stories";
 
 <Meta of={SectionsStories} />
 
@@ -23,7 +23,7 @@ own `margin` property.
 
 `.uq-sections` elements can be safely nested within each other as needed.
 
-<Canvas sourceState='hidden'>
+<Canvas sourceState="hidden">
   <Story of={SectionsStories.Sections} />
 </Canvas>
 
