--- a/packages/storybook-html/stories/patterns/header-footer/basic-page.mdx
+++ b/packages/storybook-html/stories/patterns/header-footer/basic-page.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as BasicPageStories from './basic-page.stories';
+import * as BasicPageStories from "./basic-page.stories";
 
 <Meta of={BasicPageStories} />
 
