--- a/packages/storybook-html/stories/components/core/browser-support.mdx
+++ b/packages/storybook-html/stories/components/core/browser-support.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Preview } from '@storybook/blocks';
+import { Meta, Story, Preview } from "@storybook/blocks";
 
 <Meta title="Core/Standards/Browser support" />
 
@@ -8,8 +8,8 @@ import { Meta, Story, Preview } from '@storybook/blocks';
 
 The goal of the browser support plan is to ensure the accessibility of content, no matter how the user is choosing to access it. The focus of the browser support plan is to:
 
-*   Outline a framework for managing lists of supported browsers;
-*   Provide best-practice development advice and testing protocols to help ensure websites and web applications can support listed browsers.
+- Outline a framework for managing lists of supported browsers;
+- Provide best-practice development advice and testing protocols to help ensure websites and web applications can support listed browsers.
 
 ## Support levels
 
@@ -21,40 +21,40 @@ Typically expected to cover only the **latest version** of browsers. Users of th
 
 We define technology layers as:
 
-*   Content
-*   Presentation
-*   Behaviour
+- Content
+- Presentation
+- Behaviour
 
 Browsers covered by full support:
 
-*   Chrome
-*   Internet Explorer
-*   Safari
-*   Firefox
-*   Edge
+- Chrome
+- Internet Explorer
+- Safari
+- Firefox
+- Edge
 
 ### Reduced support
 
 Reduced support is reserved for less-capable browsers ( **versions 2 - 3 years old** ) that persist in usage statistics.
 
-*   Visually essential content and navigation should have little to no degradation (especially when used to convey crucial interface elements)
-*   Basic styling elements should degrade gracefully
-*   Scripts should reduce functionality when needed.
+- Visually essential content and navigation should have little to no degradation (especially when used to convey crucial interface elements)
+- Basic styling elements should degrade gracefully
+- Scripts should reduce functionality when needed.
 
 Browsers covered by reduced support:
 
-*   Chrome
-*   Internet Explorer
-*   Safari
-*   Firefox
-*   Edge
+- Chrome
+- Internet Explorer
+- Safari
+- Firefox
+- Edge
 
 ### Unspecified support
 
 Unspecified covers anything not in Full or Reduced support.
 
-*   Aim for the best possible graceful degradation.
-*   Where possible and time permitting, identified content and presentational issues should be addressed.
+- Aim for the best possible graceful degradation.
+- Where possible and time permitting, identified content and presentational issues should be addressed.
 
 There is no requirement to develop for browsers where the software developer has stopped providing technical support or security updates, Users in these instances should be directed to discontinue their usage and seek technical support in upgrading browsers. Upgrade messages may be the most appropriate solution where users have out of date browsers and auto-update disabled.
 
@@ -62,10 +62,10 @@ There is no requirement to develop for browsers where the software developer has
 
 Analytics identifies the following operating systems as statistically significant and should be used in combination with browsers to test page compliance.
 
-*   Windows
-*   Macintosh (Mac OS)
-*   iOS
-*   Android
+- Windows
+- Macintosh (Mac OS)
+- iOS
+- Android
 
 Refer to the following section for more detailed information on operating system versions [UQ statistics](#UQ-statistics)
 
@@ -77,20 +77,20 @@ If a solution requires significant backward compatibility, there should be discu
 
 Where graceful degradation does not provide an acceptable solution it may be possible to use modern techniques:
 
-*   CSS preprocessors
-*   polyfills
-*   alerts/upgrade messages or modals
-*   Alternative ways to consume the information
+- CSS preprocessors
+- polyfills
+- alerts/upgrade messages or modals
+- Alternative ways to consume the information
 
 ### Audience
 
 Every site has an audience and you should investigate yours to see whether it has particular characteristics that you need to be aware of. Do you have existing data for the browsers and devices that your audience has been using already? If so, analyse it to see if you can identify any patterns in usage, or any combinations of:
 
-*   operating system
-*   browser
-*   browser version
-*   screen size/resolution
-*   mobile device
+- operating system
+- browser
+- browser version
+- screen size/resolution
+- mobile device
 
 This data may sometimes support the case for de-prioritising or justifying certain development work.
 
@@ -120,23 +120,23 @@ What you'll need to check depends on your site and content.
 
 A small, low value page or template, should at minimum have been tested against the following.
 
-*   A Windows operating system based browser from “Full Support” list, i.e. Chrome Browser (latest Version).
-*   Windows operating system (Version 7 or Latest).
+- A Windows operating system based browser from “Full Support” list, i.e. Chrome Browser (latest Version).
+- Windows operating system (Version 7 or Latest).
 
 Ideally this will be compared to at least one other browser and operating system combination from the “Full Support” list.
 
 Aim to cover as many browser and operating systems as you can. Pages should also pass other University standards.
 
-*   Markup Validation
-*   Accessibility
+- Markup Validation
+- Accessibility
 
 #### Focus on
 
-*   \*\* Base Functionality:\*\* Are links, dialogs, menus available as required
-*   \*\* User Interface:\*\* Does the appearance match the specification
-*   \*\* Graceful Degradation:\*\* Does the experience adjust between desktop and mobile browsers
-*   \*\* Responsiveness:\*\* Does the site adjust in mobile browsers based on criteria such as resolution, rotation, and location
-*   \*\* Performance:\*\* Does the site load within a suitable time frame, whilst allowing for network connection speed
+- \*\* Base Functionality:\*\* Are links, dialogs, menus available as required
+- \*\* User Interface:\*\* Does the appearance match the specification
+- \*\* Graceful Degradation:\*\* Does the experience adjust between desktop and mobile browsers
+- \*\* Responsiveness:\*\* Does the site adjust in mobile browsers based on criteria such as resolution, rotation, and location
+- \*\* Performance:\*\* Does the site load within a suitable time frame, whilst allowing for network connection speed
 
 ### Recommended testing
 
@@ -145,14 +145,16 @@ All listed browsers should be tested on at least one operating system or emulati
 <table>
   <caption>Browser & OS</caption>
 
-  <thead>
-    <tr>
-      <th>Windows</th>
-      <th>Macintosh</th>
-      <th>iOS</th>
-      <th>Android</th>
-    </tr>
-  </thead>
+{" "}
+
+<thead>
+  <tr>
+    <th>Windows</th>
+    <th>Macintosh</th>
+    <th>iOS</th>
+    <th>Android</th>
+  </tr>
+</thead>
 
   <tbody>
     <tr>
@@ -189,6 +191,7 @@ All listed browsers should be tested on at least one operating system or emulati
       <td>N/A</td>
       <td>N/A</td>
     </tr>
+
   </tbody>
 </table>
 
@@ -197,14 +200,16 @@ Versions of operating systems can also introduce variations in the rendering of 
 <table>
   <caption>Browser & OS Version</caption>
 
-  <thead>
-    <tr>
-      <th>Windows 10</th>
-      <th>Windows 7</th>
-      <th>Windows 8.1</th>
-      <th>Windows XP</th>
-    </tr>
-  </thead>
+{" "}
+
+<thead>
+  <tr>
+    <th>Windows 10</th>
+    <th>Windows 7</th>
+    <th>Windows 8.1</th>
+    <th>Windows XP</th>
+  </tr>
+</thead>
 
   <tbody>
     <tr>
@@ -250,6 +255,7 @@ Analytics: https://uq.edu.au | 01 Mar 2016 - 07 Mar 2017 (Sessions)
       <th>iOS</th>
       <th>Android</th>
     </tr>
+
   </thead>
 
   <tbody>
@@ -292,10 +298,11 @@ Analytics: https://uq.edu.au | 01 Mar 2016 - 07 Mar 2017 (Sessions)
       <td>N/A</td>
       <td>N/A</td>
     </tr>
+
   </tbody>
 </table>
 
-> ***Notes:***
+> **_Notes:_**
 > 24 Operating systems and 92 Browsers are identified in the statistics, Stats past the ones displayed are not of a volume to warrant inclusion.
 > N/A indicates combination is not available or not listed in the stats.
 
@@ -313,6 +320,7 @@ Analytics: https://uq.edu.au | 01 Mar 2016 - 07 Mar 2017 (Sessions)
       <th>Windows 8.1</th>
       <th>Windows XP</th>
     </tr>
+
   </thead>
 
   <tbody>
@@ -328,9 +336,9 @@ Analytics: https://uq.edu.au | 01 Mar 2016 - 07 Mar 2017 (Sessions)
 
 ## References
 
-*   Queensland Government Browser Support List (2012-2014 Audit)
-*   Gov.UK Browser Support Standards
-*   31 Ways to Spend Less Time on Manual Cross–Browser
+- Queensland Government Browser Support List (2012-2014 Audit)
+- Gov.UK Browser Support Standards
+- 31 Ways to Spend Less Time on Manual Cross–Browser
 
 ### Additional notes
 
