--- a/packages/storybook-html/stories/components/grid/grid.mdx
+++ b/packages/storybook-html/stories/components/grid/grid.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story } from '@storybook/blocks';
+import { Meta, Story } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as GridStories from './grid.stories';
+import * as GridStories from "./grid.stories";
 
 <Meta of={GridStories} />
 
@@ -12,19 +12,21 @@ import * as GridStories from './grid.stories';
 
 ## Overview
 
-Layouts using our grid are achieved using a combination of `.uq-grid` (*grid
-container*) and `.uq-grid__col` (*grid column*) elements and their modifiers.
+Layouts using our grid are achieved using a combination of `.uq-grid` (_grid
+container_) and `.uq-grid__col` (_grid column_) elements and their modifiers.
 
 > ⚠️ Important: **grid containers should be afforded the entire width of the
-> viewport** (naturally, this doesn't apply to *nested* and *full-width* grids).
+> viewport** (naturally, this doesn't apply to _nested_ and _full-width_ grids).
 
 ## Golden
 
-This grid gives you a *main* content column and a *sidebar* column that stack
-for mobile. Under the hood, is our *6-8-12* grid so you can keep your content
+This grid gives you a _main_ content column and a _sidebar_ column that stack
+for mobile. Under the hood, is our _6-8-12_ grid so you can keep your content
 consistently aligned with the base grid.
 
-  <Story of={GridStories.golden} /> 
+{" "}
+
+<Story of={GridStories.golden} />{" "}
 
 ### How-to
 
@@ -45,9 +47,11 @@ See what happens when you add more columns to the same container!
 
 ## Halves
 
-Behaves like *Golden* but has two columns of equal size at larger screen sizes.
+Behaves like _Golden_ but has two columns of equal size at larger screen sizes.
 
-  <Story of={GridStories.halves} /> 
+{" "}
+
+<Story of={GridStories.halves} />{" "}
 
 ### How-to
 
@@ -60,10 +64,12 @@ Behaves like *Golden* but has two columns of equal size at larger screen sizes.
 
 ## Thirds
 
-Behaves like *Golden* but has three columns of equal size at larger screen
+Behaves like _Golden_ but has three columns of equal size at larger screen
 sizes.
 
-  <Story of={GridStories.thirds} /> 
+{" "}
+
+<Story of={GridStories.thirds} />{" "}
 
 ### How-to
 
@@ -77,9 +83,11 @@ sizes.
 
 ## Quarters
 
-Behaves like *Golden* but has four columns of equal size at larger screen sizes.
+Behaves like _Golden_ but has four columns of equal size at larger screen sizes.
 
-  <Story of={GridStories.quarters} /> 
+{" "}
+
+<Story of={GridStories.quarters} />{" "}
 
 ### How-to
 
@@ -94,12 +102,14 @@ Behaves like *Golden* but has four columns of equal size at larger screen sizes.
 
 ## Flexible grid
 
-The flexible grid leverages the power of [*CSS Grid Layout*](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout)
+The flexible grid leverages the power of [_CSS Grid Layout_](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout)
 to give you a quick & flexible layout solution. You can use this grid to
 organise your content into columns that stack when browser sizes are smaller.
 Therefore, it makes it an ideal solution for arranging linear material.
 
-  <Story of={GridStories.flexible1} /> 
+{" "}
+
+<Story of={GridStories.flexible1} />{" "}
 
 ### How-to
 
@@ -115,7 +125,9 @@ modifier) like the following.
 </div>
 ```
 
-  <Story of={GridStories.flexible2} /> 
+{" "}
+
+<Story of={GridStories.flexible2} />{" "}
 
 Pay attention to what the grid does when the screens get very small.
 
@@ -123,12 +135,12 @@ Pay attention to what the grid does when the screens get very small.
 
 If you're looking for more control over your layout, we've built a grid that
 adapts the number of available columns to different screen sizes. It's a 6-, 8-,
-and 12-column grid built into one CSS class system! Starting from *mobile*, the
-*column-span* classes give you the freedom to craft layouts to suit different
+and 12-column grid built into one CSS class system! Starting from _mobile_, the
+_column-span_ classes give you the freedom to craft layouts to suit different
 screen sizes.
 
 > By default, we add the [specified margins](?path=/docs/layout-layout--base-layout-grid-visualised#specifications-per-breakpoint)
-> to both sides of the column row *and* apply a max-width on XL screens on the
+> to both sides of the column row _and_ apply a max-width on XL screens on the
 > root `.uq-grid` node.
 
 ### Basic how-to
@@ -148,7 +160,9 @@ screen sizes.
 </div>
 ```
 
-  <Story of={GridStories.twelveEightSixExample1} /> 
+{" "}
+
+<Story of={GridStories.twelveEightSixExample1} />{" "}
 
 ### Stacking columns for smaller screens
 
@@ -174,31 +188,39 @@ layout with the grid:
 The difference between this example and the one before is that the two columns
 take up the whole available width for the smallest screens.
 
-  <Story of={GridStories.twelveEightSixExample2} /> 
+{" "}
 
-### The 6-column grid column-span classes (designed for *mobile* displays)
+<Story of={GridStories.twelveEightSixExample2} />{" "}
+
+### The 6-column grid column-span classes (designed for _mobile_ displays)
 
 Create layouts for the smallest screens.
 
 `uq-grid__col--[1—6]`, e.g. `<div class="uq-grid__col uq-grid__col--4">...</div>`
 
-  <Story of={GridStories.twelveEightSixMobile} /> 
+{" "}
 
-### The 8-column grid column-span classes (designed for *tablet* displays)
+<Story of={GridStories.twelveEightSixMobile} />{" "}
+
+### The 8-column grid column-span classes (designed for _tablet_ displays)
 
 Shift the layout for larger screens.
 
 `uq-grid__col--md-[1—8]`, e.g. `<div class="uq-grid__col uq-grid__col--4 uq-grid__col--md-6">...</div>`
 
-  <Story of={GridStories.twelveEightSixTablet} /> 
+{" "}
 
-### The 12-column grid column-span classes (designed for *desktop/laptop* displays)
+<Story of={GridStories.twelveEightSixTablet} />{" "}
+
+### The 12-column grid column-span classes (designed for _desktop/laptop_ displays)
 
 Shift the layout for the largest screens.
 
 `uq-grid__col--xl-[1—12]`, e.g. `<div class="uq-grid__col uq-grid__col--4 uq-grid__col--md-6 uq-grid__col--xl-8">...</div>`
 
-  <Story of={GridStories.twelveEightSixDesktop} /> >
+{" "}
+
+<Story of={GridStories.twelveEightSixDesktop} /> >
 
 ## Nesting grids
 
@@ -206,7 +228,9 @@ You can nest grids, i.e. place another grid container within a grid column, to
 create nested layouts. However, columns can become too narrow if you nest too
 deeply or use small column spans.
 
-  <Story of={GridStories.twelveEightSixNested} /> 
+{" "}
+
+<Story of={GridStories.twelveEightSixNested} />{" "}
 
 ### Example using the 6-8-12 grid
 
@@ -261,7 +285,9 @@ still followed.
 </div>
 ```
 
-  <Story of={GridStories.flexible1} /> 
+{" "}
+
+<Story of={GridStories.flexible1} />{" "}
 
 ## Alternative layout container
 
@@ -280,11 +306,13 @@ container (`.uq-grid`) and a full length grid column (`.uq-grid__col`).
 </div>
 ```
 
-  <Story of={GridStories.layoutContainer} /> 
+{" "}
+
+<Story of={GridStories.layoutContainer} />{" "}
 
 ## SASS mixins
 
-The `@uqds/grid` package provides [*mixins*](https://sass-lang.com/documentation/at-rules/mixin)
+The `@uqds/grid` package provides [_mixins_](https://sass-lang.com/documentation/at-rules/mixin)
 to help you develop your own CSS rules using Sass such that they align with our
 layout system.
 
