--- a/packages/storybook-html/stories/components/header-legacy/header.mdx
+++ b/packages/storybook-html/stories/components/header-legacy/header.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as HeaderStories from './header.stories';
+import * as HeaderStories from "./header.stories";
 
 <Meta of={HeaderStories} />
 
@@ -19,14 +19,14 @@ quickly identify and trust UQ websites.
 ## With global search only
 
 Provides the UQ strapline, global links, and a general UQ site search feature
-using [*UQ Search*](https://www.uq.edu.au/search).
+using [_UQ Search_](https://www.uq.edu.au/search).
 
 > Don't reappropriate the search function for special integrated search
 > functionality within your application e.g. searching for a location on a map,
 > searching for books or articles in a library database.
 
 <Canvas sourceState="hidden" withToolbar>
-  <Story of={HeaderStories.headerNoLocalSearch} /> 
+  <Story of={HeaderStories.headerNoLocalSearch} />
 </Canvas>
 
 ```html
@@ -155,14 +155,14 @@ using [*UQ Search*](https://www.uq.edu.au/search).
 ## With global and site search
 
 Provides the UQ strapline, global links, and a site search feature using
-[*UQ Search*](https://www.uq.edu.au/search). Two radio options are included to
+[_UQ Search_](https://www.uq.edu.au/search). Two radio options are included to
 allow users to choose to search all UQ sites or just the content on your site\*.
 
 > \*If your application/website isn't indexed by UQ Search, please opt
 > to use the global header **with global search only**.
 
 <Canvas sourceState="hidden" withToolbar>
-  <Story of={HeaderStories.header} /> 
+  <Story of={HeaderStories.header} />
 </Canvas>
 
 ```html
