--- a/packages/storybook-html/stories/components/header/header.mdx
+++ b/packages/storybook-html/stories/components/header/header.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as HeaderStories from './header.stories';
+import * as HeaderStories from "./header.stories";
 
 <Meta of={HeaderStories} />
 
@@ -21,23 +21,23 @@ It also provides a consistent information architecture (navigation structure) fo
 
 The interim header is suitable for a broad range of sites and applications, it includes the following sections:
 
-*   The primary section includes the UQ logo, Primary navigation (Study, Research, Partners and community, about) and search using [*UQ Search*](https://www.uq.edu.au/search).
-*   The secondary section provides navigation to UQ home, News, Events, Give and contact.
-*   An optional third navigation section is available on mobile when paired with the [Site header component](?path=/docs/components-site-header--site-header-with-subnav), which provides site title and local navigation options. This combines to provide a stacked mobile menu of all three sections (Local, primary and secondary navigation).
+- The primary section includes the UQ logo, Primary navigation (Study, Research, Partners and community, about) and search using [_UQ Search_](https://www.uq.edu.au/search).
+- The secondary section provides navigation to UQ home, News, Events, Give and contact.
+- An optional third navigation section is available on mobile when paired with the [Site header component](?path=/docs/components-site-header--site-header-with-subnav), which provides site title and local navigation options. This combines to provide a stacked mobile menu of all three sections (Local, primary and secondary navigation).
 
 <Canvas withToolbar>
-  <Story of={HeaderStories.HeaderInterim} /> 
+  <Story of={HeaderStories.HeaderInterim} />
 </Canvas>
 
 ### Header with mega menu
 
 Currently reserved for the UQ Homepage and level one landing pages for Study, Research, Partners & community and about.
 
-*   The primary section includes the UQ logo, Primary navigation (Study, Research, Partners and community, about) with an extended drop down information architecture (mega menu) and search using [*UQ Search*](https://www.uq.edu.au/search).
-*   The secondary section provides navigation to UQ home, News, Events, Give and contact.
+- The primary section includes the UQ logo, Primary navigation (Study, Research, Partners and community, about) with an extended drop down information architecture (mega menu) and search using [_UQ Search_](https://www.uq.edu.au/search).
+- The secondary section provides navigation to UQ home, News, Events, Give and contact.
 
-<Canvas withToolbar >
-  <Story height='300px' of={HeaderStories.Header} />
+<Canvas withToolbar>
+  <Story height="300px" of={HeaderStories.Header} />
 </Canvas>
 
 ### Usage
@@ -64,17 +64,21 @@ appHeight();
 When implementation of the full header is not possible, a simplified approach using basic elements may be appropriate.
 UQ purple background combined with the UQ logo make up the most important elements of the header.
 
-  <Story of={HeaderStories.basicHeader} />
+{" "}
+
+<Story of={HeaderStories.basicHeader} />
 
 ### Default search
 
-The default option is a global search of all UQ. The search feature sends users to results on [*UQ Search*](https://www.uq.edu.au/search).
+The default option is a global search of all UQ. The search feature sends users to results on [_UQ Search_](https://www.uq.edu.au/search).
 
 > Don't reappropriate the search function for special integrated search
 > functionality within your application e.g. searching for a location on a map,
 > searching for books or articles in a library database.
 
-  <Story of={HeaderStories.searchGlobal} />
+{" "}
+
+<Story of={HeaderStories.searchGlobal} />
 
 ### Global and local search
 
@@ -82,7 +86,9 @@ You can optionally provide two radio fields, allowing users to choose to search 
 
 > \*If your application/website isn't indexed by UQ Search, it may impact what results are provided by a restricted search.
 
-  <Story of={HeaderStories.searchLocal} />
+{" "}
+
+<Story of={HeaderStories.searchLocal} />
 
 ```html
 <div class="uq-header__search-range">
@@ -120,7 +126,7 @@ Optionally pair with the [Site header component](?path=/docs/components-site-hea
 
 Software as a service (SaaS) applications and templates supplied by third party solutions may make implementation of the header difficult.
 
-We recommend simplifying the header to basic elements [*Header simplified*](?path=/docs/components-header--basic-header).
+We recommend simplifying the header to basic elements [_Header simplified_](?path=/docs/components-header--basic-header).
 
 ## Accessibility
 
@@ -132,4 +138,4 @@ Every navigation `<nav>` includes an aria label, for example:
 
 ## Related
 
-*   [Site header](?path=/docs/components-site-header--site-header-with-subnav)
+- [Site header](?path=/docs/components-site-header--site-header-with-subnav)
