--- a/packages/storybook-html/stories/components/side-nav/side-nav.mdx
+++ b/packages/storybook-html/stories/components/side-nav/side-nav.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as SideNavStories from './side-nav.stories';
+import * as SideNavStories from "./side-nav.stories";
 
 <Meta of={SideNavStories} />
 
@@ -19,7 +19,7 @@ A vertical list of links for site navigation typically placed next to the body c
 ### Single-level
 
 <Canvas sourceState="hidden">
-  <Story of={SideNavStories.sideNavSingleLevel} /> 
+  <Story of={SideNavStories.sideNavSingleLevel} />
 </Canvas>
 
 ```html
@@ -50,7 +50,7 @@ A vertical list of links for site navigation typically placed next to the body c
 ### Multi-level
 
 <Canvas sourceState="hidden">
-  <Story of={SideNavStories.sideNavMultiLevel} /> 
+  <Story of={SideNavStories.sideNavMultiLevel} />
 </Canvas>
 
 ```html
@@ -93,8 +93,8 @@ A vertical list of links for site navigation typically placed next to the body c
 
 ## When and how to use
 
-*   Use when there is related links to the webpage content.
-*   Use a grid layout to place the side nav component next to the webpage content.
+- Use when there is related links to the webpage content.
+- Use a grid layout to place the side nav component next to the webpage content.
 
 ## Accessibility
 
