--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-3-wayfinding-controls.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-3-wayfinding-controls.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as UqMaps3WayfindingControlsStories from './uq-maps-3-wayfinding-controls.stories';
+import * as UqMaps3WayfindingControlsStories from "./uq-maps-3-wayfinding-controls.stories";
 
 <Meta of={UqMaps3WayfindingControlsStories} />
 
@@ -18,8 +18,8 @@ location.
 Use the HTML markup provided in the example below to apply the styles from the
 provided CSS.
 
-<Canvas sourceState='hidden' withToolbar>
-  <Story of={UqMaps3WayfindingControlsStories.wayfindingControl} /> 
+<Canvas sourceState="hidden" withToolbar>
+  <Story of={UqMaps3WayfindingControlsStories.wayfindingControl} />
 </Canvas>
 
 ## 3B. With circular progress indicator
@@ -28,13 +28,12 @@ provided CSS.
 
 Using the same HTML markup as above, except we're applying the `uq-maps__wayfinding-controls--is-working`
 class to the container instead. We also have to add in some extra markup and
-scripted behaviour for the [*Material Design*][1] progress indicator. Please see example
+scripted behaviour for the [_Material Design_][1] progress indicator. Please see example
 code.
 
-<Canvas sourceState='hidden' withToolbar>
-  <Story of={UqMaps3WayfindingControlsStories.wayfindingControlWorking} /> 
+<Canvas sourceState="hidden" withToolbar>
+  <Story of={UqMaps3WayfindingControlsStories.wayfindingControlWorking} />
 </Canvas>
 
 [1]: https://material.io/components/progress-indicators#circular-progress-indicators
-
 [2]: https://material.io/develop/web/components/progress-indicator
