--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-intro.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-intro.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 
 <Meta title="Deliverables/UQ Maps/Overview" />
@@ -10,7 +10,7 @@ import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 ## Overview
 
 These are temporary installation & usage instructions; intended only for the
-*UQ Maps* project team.
+_UQ Maps_ project team.
 
 ## Getting started
 
@@ -18,12 +18,12 @@ These are temporary installation & usage instructions; intended only for the
     [🔒 Download `@uqds/button`][7]\
     **If you want to use the Sass files,** you will also need these package
     dependencies:
-    *   [🔒 Download `@uqds/core`][5]
-    *   [🔒 Download `@uqds/body`][6]
-        > Downloads restricted to ITS-ADS staff only.
+    - [🔒 Download `@uqds/core`][5]
+    - [🔒 Download `@uqds/body`][6]
+      > Downloads restricted to ITS-ADS staff only.
 2.  (Optional) Add the package as a JavaScript module dependency into your
     project. Unfortunately, it's not as simple as running `npm i @uqds/app-maps`
-    *yet*. **Required if you want to use the Sass files. Please also note the
+    _yet_. **Required if you want to use the Sass files. Please also note the
     `@uqds` scope in the package name.**\
     \[TODO: instructions here...]
 
@@ -58,7 +58,7 @@ Use and configure `sass-loader`.
 
 ### CRA (create-react-app) configuration
 
-\[TODO] If your application is an *unejected* `create-react-app` project, you will have
+\[TODO] If your application is an _unejected_ `create-react-app` project, you will have
 to...
 
 ### Without module bundling
@@ -69,21 +69,15 @@ See [UQ Maps: icons][3].
 
 ## Additional resources
 
-Restricted to *UQ Maps* project team members only. Contact web services to
+Restricted to _UQ Maps_ project team members only. Contact web services to
 request access.
 
 [🔒 Icon design file (Figma)][2]
 
 [1]: https://uq.sharepoint.com/teams/LmD6Nzqn/Shared%20Documents/Team%20Aqua/Applications/Uq%20Maps/Code/app-maps-1.0.2.tgz
-
 [2]: https://www.figma.com/file/MKgUvdM8E2jOwF80Qwg8Ha/UQ-Maps-Icon-Export?node-id=0%3A1
-
 [3]: /?path=/docs/deliverables-uq-maps-0-icons--ui
-
 [4]: https://sass-lang.com/dart-sass
-
 [5]: https://uq.sharepoint.com/teams/LmD6Nzqn/Shared%20Documents/Team%20Aqua/Applications/Uq%20Maps/Code/core-1.0.0.tgz
-
 [6]: https://uq.sharepoint.com/teams/LmD6Nzqn/Shared%20Documents/Team%20Aqua/Applications/Uq%20Maps/Code/body-1.0.0.tgz
-
 [7]: https://uq.sharepoint.com/teams/LmD6Nzqn/Shared%20Documents/Team%20Aqua/Applications/Uq%20Maps/Code/button-1.0.0.tgz
