--- a/packages/storybook-html/stories/layout/card-grid/card-grid.mdx
+++ b/packages/storybook-html/stories/layout/card-grid/card-grid.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as CardGridStories from './card-grid.stories';
+import * as CardGridStories from "./card-grid.stories";
 
 <Meta of={CardGridStories} />
 
@@ -40,8 +40,8 @@ In this target size, cards will display full width at all times.
 
 Modifier class: `.uq-card-grid--target-1x`
 
-<Canvas sourceState='hidden'>
-  <Story of={CardGridStories.OnePerRow} /> 
+<Canvas sourceState="hidden">
+  <Story of={CardGridStories.OnePerRow} />
 </Canvas>
 
 ### Two per row
@@ -50,7 +50,7 @@ Cards will typically display two per row except on some mobile devices.
 
 Modifier class: `.uq-card-grid--target-2x`
 
-<Canvas sourceState='hidden'>
+<Canvas sourceState="hidden">
   <Story of={CardGridStories.TwoPerRow} />
 </Canvas>
 
@@ -61,7 +61,7 @@ devices and one per row on mobile devices.
 
 Modifier class: `.uq-card-grid--target-3x`
 
-<Canvas sourceState='hidden'>
+<Canvas sourceState="hidden">
   <Story of={CardGridStories.ThreePerRow} />
 </Canvas>
 
@@ -73,6 +73,6 @@ on mobile devices.
 
 Modifier class: `.uq-card-grid--target-4x`
 
-<Canvas sourceState='hidden'>
+<Canvas sourceState="hidden">
   <Story of={CardGridStories.FourPerRow} />
 </Canvas>
