--- a/packages/storybook-html/stories/layout/page-layouts/sidebar/sidebar.docs.mdx
+++ b/packages/storybook-html/stories/layout/page-layouts/sidebar/sidebar.docs.mdx
@@ -1,6 +1,6 @@
-import { Meta, Story, Canvas } from '@storybook/blocks';
+import { Meta, Story, Canvas } from "@storybook/blocks";
 import StatusBadge from "../../../../.storybook/custom/components/StatusBadge";
-import * as SidebarStories from './sidebar.stories';
+import * as SidebarStories from "./sidebar.stories";
 
 <Meta of={SidebarStories} />
 
@@ -24,7 +24,7 @@ Then implement the component as per the HTML example below.
 the `.uq-sections` element should be used within `.uq-sidebar-layout__main` to
 provide correct **section spacing**.
 
-<Canvas sourceState='hidden'>
+<Canvas sourceState="hidden">
   <Story of={SidebarStories.Sidebar} />
 </Canvas>
 
@@ -43,7 +43,7 @@ provide correct **section spacing**.
 
 #### Sidebar layout with sections and card grids
 
-<Canvas sourceState='hidden'>
+<Canvas sourceState="hidden">
   <div class="uqds-layout-demo-bg">
     <div class="uq-container">
       <div class="uq-sidebar-layout">
